--- a/cooker_blog_front/package.json
+++ b/cooker_blog_front/package.json
@@ -28,7 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "cypress": "^6.8.0",
     "http-proxy-middleware": "^1.0.6",
     "jsonapi-react": "0.0.23",
     "miragejs": "^0.1.41"
