--- a/cooker_blog_front/package.json
+++ b/cooker_blog_front/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "cypress": "^6.8.0",
     "js-cookie": "^2.2.1",
     "moment": "^2.29.1",
     "react": "^17.0.1",
